# TestSFML

./: .gitignore  CMakeLists.txt  LICENSE  TestSFML
Sources/: Application.cpp  Application.hpp  Keyboard.cpp  Keyboard.hpp  Main.cpp
Sources/Apps/: DiamondSquare.cpp  DiamondSquare.hpp  GenericApp.cpp  GenericApp.hpp  LifeGame.cpp  LifeGame.hpp  TestApp.cpp  TestApp.hpp
Sources/Apps/AStar/: AStar.cpp  AStar.hpp  AStarCell.cpp  AStarCell.hpp
Sources/Util/: MathUtil.cpp  MathUtil.hpp
